Makes magnifier observe AXEventManager for focus changes

Bug: 865575
Change-Id: I8d8328a459d7621d6fc0a0d65e0f24f788b9767f
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1852414
Commit-Queue: David Tseng <dtseng@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#704854}