chrome/browser/chromeos/accessibility/magnification_manager.cc
@@ -27,6 +27,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "content/public/browser/notification_source.h"
 #include "content/public/common/service_manager_connection.h"
 #include "services/service_manager/public/cpp/connector.h"
+#include "ui/views/accessibility/ax_event_manager.h"
 
 namespace chromeos {
 
@@ -95,6 +96,18 @@ double MagnificationManager::GetSavedScreenMagnifierScale() const {
       ash::prefs::kAccessibilityScreenMagnifierScale);
 }
 
+void MagnificationManager::OnViewEvent(views::View* view,
+                                       ax::mojom::Event event_type) {
+  if (!fullscreen_magnifier_enabled_ && !IsDockedMagnifierEnabled())
+    return;
+
+  if (event_type != ax::mojom::Event::kFocus &&
+      event_type != ax::mojom::Event::kSelection)
+    return;
+
+  HandleFocusChanged(view->GetBoundsInScreen(), false);
+}
+
 void MagnificationManager::SetProfileForTest(Profile* profile) {
   SetProfile(profile);
 }
@@ -109,10 +122,12 @@ MagnificationManager::MagnificationManager() {
   registrar_.Add(this, content::NOTIFICATION_FOCUS_CHANGED_IN_PAGE,
                  content::NotificationService::AllSources());
   user_manager::UserManager::Get()->AddSessionStateObserver(this);
+  views::AXEventManager::Get()->AddObserver(this);
 }
 
 MagnificationManager::~MagnificationManager() {
   CHECK(this == g_magnification_manager);
+  views::AXEventManager::Get()->RemoveObserver(this);
   user_manager::UserManager::Get()->RemoveSessionStateObserver(this);
 }
 
@@ -281,17 +296,22 @@ void MagnificationManager::HandleFocusChangedInPage(
   if (node_details->is_editable_node)
     return;
 
-  const gfx::Rect& bounds_in_screen = node_details->node_bounds_in_screen;
+  HandleFocusChanged(node_details->node_bounds_in_screen,
+                     node_details->is_editable_node);
+}
+
+void MagnificationManager::HandleFocusChanged(const gfx::Rect& bounds_in_screen,
+                                              bool is_editable) {
   if (bounds_in_screen.IsEmpty())
     return;
 
   // Fullscreen magnifier and docked magnifier are mutually exclusive.
   if (fullscreen_magnifier_enabled_) {
     ash::Shell::Get()->magnification_controller()->HandleFocusedNodeChanged(
-        node_details->is_editable_node, node_details->node_bounds_in_screen);
+        is_editable, bounds_in_screen);
     return;
   }
-  DCHECK(docked_magnifier_enabled);
+  DCHECK(IsDockedMagnifierEnabled());
   ash::DockedMagnifierController::Get()->CenterOnPoint(
       bounds_in_screen.CenterPoint());
 }
