chrome/browser/chromeos/accessibility/magnification_manager.h
@@ -11,6 +11,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "components/user_manager/user_manager.h"
 #include "content/public/browser/notification_observer.h"
 #include "content/public/browser/notification_registrar.h"
+#include "ui/views/accessibility/ax_event_observer.h"
 
 class PrefChangeRegistrar;
 class Profile;
@@ -31,7 +32,8 @@ namespace chromeos {
 // either Fullscreen or Docked magnifier is enabled.
 class MagnificationManager
     : public content::NotificationObserver,
-      public user_manager::UserManager::UserSessionStateObserver {
+      public user_manager::UserManager::UserSessionStateObserver,
+      public views::AXEventObserver {
  public:
   // Creates an instance of MagnificationManager. This should be called once.
   static void Initialize();
@@ -60,6 +62,9 @@ class MagnificationManager
   // Loads the Fullscreen magnifier scale from the pref.
   double GetSavedScreenMagnifierScale() const;
 
+  // views::AXEventObserver:
+  void OnViewEvent(views::View* view, ax::mojom::Event event_type) override;
+
   void SetProfileForTest(Profile* profile);
 
  private:
@@ -85,6 +90,9 @@ class MagnificationManager
 
   // Called when received content::NOTIFICATION_FOCUS_CHANGED_IN_PAGE.
   void HandleFocusChangedInPage(const content::NotificationDetails& details);
+
+  // Called in response to AXEventObserver.
+  void HandleFocusChanged(const gfx::Rect& bounds_in_screen, bool is_editable);
 
   Profile* profile_ = nullptr;
 
